# quibble

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean  configure
.github/workflows/: documentation.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl
docs/src/: QuibbleDocs.jl  index.md  justification.md
examples/: chaos.c  chaos.qbl  simple_shader.c  smear.c  smear.qbl  swirled.c  swirled.qbl
include/: config.h  demo_functions.h  errors.h  images.h  io.h  macros.h  qbinfo.h  quibble.h  quibble_args.h  quibble_buffers.h  quibble_canvas.h  quibble_context.h  quibble_inputs.h  quibble_program.h  quibble_stanzas.c  quibble_stanzas.h  quibble_verses.h  string_manip.h  tests.h
scribbles/: chaos.qbl  colors.qbl  example.qbl  no_args.qbl  no_bodies.qbl  nothings.qbl  output.qbl  points.qbl  simple_camera.qbl  simple_shader.qbl
scribbles/test/: example.qbl  nothings.qbl
src/: camera.c  config.c  demo.c  demo_functions.c  errors.c  images.c  io.c  points.c  qbinfo.c  quibble_args.c  quibble_buffers.c  quibble_canvas.c  quibble_context.c  quibble_inputs.c  quibble_poems.c  quibble_program.c  quibble_stanzas.c  quibble_verses.c  string_manip.c  tests.c
test/: char_test.c  example.qbl  example_2.qbl  input_tests.c  input_tests.h  io_tests.c  program_tests.c  stanza_example.qbl  test.c  tests.h  verse_tests.c  verse_tests.h
